--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
                 <h1>0</h1>
             </div>
         </div>
+        <div class="hands">
+            <div class="paper">
+                <img src="assets/Paper.png" alt="">
+            </div>
+            <div class="scissors">
+                <img src="assets/Scissors.png" alt="">
+            </div>
+            <div class="rock">
+                <img src="assets/Rock.png" alt="">
+            </div>
+        </div>
     </div>
 </body>
 </html>
