--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body >
     <div class="wrapper">
         <div class="scoreboard">
             <div class="title">
@@ -23,13 +23,36 @@
         </div>
         <div class="hands">
             <div class="paper">
-                <img src="assets/Paper.png" alt="">
+                <img src="assets/Paper.png" alt="" onclick="pickUserHand('paper')">
             </div>
             <div class="scissors">
-                <img src="assets/Scissors.png" alt="">
+                <img src="assets/Scissors.png" onclick="pickUserHand('scissors')">
             </div>
             <div class="rock">
-                <img src="assets/Rock.png" alt="">
+                <img src="assets/Rock.png" onclick="pickUserHand('rock')">
+            </div>
+        </div>
+        <div class="contest">
+            <div class="userhand">
+                <h1>YOU PICKED</h1>
+                <div class="handImageContainer">
+                    <img src="assets/Paper.png" alt="">
+                </div>
+                
+            </div>
+            <div class="referee">
+                <div class="decision">
+                    <h1>YOU WIN</h1>
+                    <div class="newGame">
+                        PLAY AGAIN
+                    </div>
+                </div>
+            </div>
+            <div class="computerHand">
+                <h1>THE BOT PICKED</h1>
+                <div class="handImageContainer">
+                    <img src="assets/Rock.png" alt="">
+                </div>
             </div>
         </div>
     </div>
